# ClickReplay

./: .gitignore  AGENTS.md  LICENSE  README.md  config.example.ini  pyproject.toml
.github/workflows/: build.yml
packaging/: clickreplay.spec
src/clickreplay/: __init__.py  cli.py  config.py  gui.py  monitors.py  player.py  recorder.py  script.py
tests/: test_config.py  test_player.py  test_recorder.py  test_script.py
